Fixing search icon overlapping input field; Searching URI redirects instantly

--- a/src/assets/css/forms.css
+++ b/src/assets/css/forms.css
@@ -137,7 +137,7 @@
 	font-weight: 100 !important;
 	border-bottom: 1px solid #FFFFFF;
 	width: 100%;
-	padding: 10px 0;
+	padding: 10px 25px 10px 0;
 	background: transparent;
 	color: #FFFFFF;
 }
